f-measure configuration has been done in this commit

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                         <exclude>tools/**</exclude>
                         <exclude>matchingEngine/**</exclude>
                         <exclude>randomRequest/**</exclude>
-                        <exclude>elevatorPlusStack/**</exclude>
+                        <exclude>elevatorTraceable/**</exclude>
                         <exclude>elevatorMutated/**</exclude>
                         <exclude>elevator/TCRunner.*</exclude>
                         <exclude>elevatorInstrumented/**</exclude>
